Transfered style to style.css minor change

--- a/starterPage/style.css
+++ b/starterPage/style.css
@@ -1,4 +1,45 @@
-
+body {
+  margin: 0;
+  padding: 0;
+  background-image: url('ancient-egypt-wallpaper.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  font-family: Arial, sans-serif;
+  display: flex;
+  flex-direction: column; /* Set flex direction to column */
+  align-items: flex-start; /* Align items to the left */
+  height: 100vh;
+}
+.title {
+  font-size: 48px; /* Increase font size */
+  color: #f4150d; /* Change text color to white */
+  margin: 20px 0; /* Add margin to the top and bottom */
+}
+.container {
+  display: flex;
+  flex-direction: column; /* Set flex direction to column */
+  align-items: flex-start; /* Align to the left */
+  margin-left: 20px; /* Add some margin for spacing */
+}
+.box {
+  width: 250px;
+  height: 75px;
+  background-image: url('PlayButton.png');
+  background-size: cover;
+  background-color: lightblue;
+  background-repeat: no-repeat;
+  border-radius: 10px;
+  text-align: center;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+  margin-bottom: 20px;
+}
+.box:hover {
+  transform: scale(1.05);
+}
+.box:hover h2 {
+  color: burlywood;
+}
 .container-style {
   display: flex;
   flex-direction: column; /* Set flex direction to column */
