--- a/starterPage/style.css
+++ b/starterPage/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  background-image: url('ancient-egypt-wallpaper.jpg');
+  background-image: url('../Images/ancient-egypt-wallpaper.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   font-family: Arial, sans-serif;
@@ -24,7 +24,7 @@ body {
 .box {
   width: 250px;
   height: 75px;
-  background-image: url('PlayButton.png');
+  background-image: url('../Images/PlayButton.png');
   background-size: cover;
   background-color: lightblue;
   background-repeat: no-repeat;
@@ -68,7 +68,7 @@ body {
 .box-style {
   width: 334px; /* Adjusted width */
   height: 120px;
-  background-image: url('PlayButton.png');
+  background-image: url('../Images/PlayButton.png');
   background-size: cover;
   background-repeat: no-repeat;
   border-radius: 10px;
@@ -96,7 +96,7 @@ h2 {
 .box-credits {
   width: 334px;
   height: 120px;
-  background-image: url('PlayButton.png');
+  background-image: url('../Images/PlayButton.png');
   background-size: cover;
   background-repeat: no-repeat;
   border-radius: 10px;
