--- a/starterPage/style.css
+++ b/starterPage/style.css
@@ -4,7 +4,7 @@ body {
   background-image: url('../Images/ancient-egypt-wallpaper.jpg');
   background-size: cover;
   background-repeat: no-repeat;
-  font-family: Arial, sans-serif;
+  font-family: Franklin Gothic, Arial, sans-serif;
   display: flex;
   flex-direction: column; /* Set flex direction to column */
   align-items: flex-start; /* Align items to the left */
