--- a/mainPage/shopPage/shop.css
+++ b/mainPage/shopPage/shop.css
@@ -6,7 +6,7 @@
 
 
 .you{
-    background-color: whitesmoke;
+    background-color: white;
     height: 100%;
     width: 50%;
     border-right: 2px black solid;
@@ -14,7 +14,7 @@
 }
 
 .buyer{
-    background-color: whitesmoke;
+    background-color: white;
     height: 100%;
     width: 50%;
     
@@ -31,12 +31,13 @@
     flex-direction: row;
     height: 11vh;
     width: 100%;
-    background-color: white;
+    background-color: beige;
     justify-content: center;
     align-items: center;
     text-align: center;
     padding-left: 15%;
     border-bottom: 2px brown solid;
+    
     
 }
 
@@ -54,11 +55,13 @@ img{
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    
 }
 
 #generate{
+ 
     position: absolute;
-    top: 100%;
+    top: 60%;
     left: 45%;
     width: 10%;
     height: 10%;
@@ -73,7 +76,7 @@ img{
     left: 45%;
     width: 10%;
     height: 10%;
-    
+    color: white;
     text-align: center;
     
 }
@@ -90,6 +93,8 @@ img{
 
 input{
     margin: 0 0 0 5%;
+    height: 3vh;
+    font-size: 13px;
 }
 
 .name{
@@ -102,7 +107,66 @@ h1{
 }
 
 #transa, #res{
-    background-color: white;
+    background-color: beige;
     font-size: 20px;
 
+}
+
+#triangle {
+    width: 0;
+    height: 0;
+    border: solid 15px;
+    border-color: transparent transparent transparent transparent;
+    position: absolute;
+    top: 110%;
+    left: 40%;
+
+}
+
+#res {
+    background-color: brown;
+    font-size: 25px;
+}
+
+#recap {
+    display: none;
+    position: absolute;
+    width: 50%;
+    height: 50%;
+    top: 10%;
+    left: 25%;
+    background-color: white;
+    text-align: center;
+    border: 2px brown solid;
+}
+
+#compute{
+    position: absolute;
+    top: 120%;
+    left: 45%;
+    width: 10%;
+    height: 5%;
+    font-size: 20px;
+    text-align: center;
+    margin-top: 20px;
+  
+}
+
+#compute:hover{
+    background-color: grey;
+}
+
+.bottom{
+    display: flex;
+    flex-direction: row;
+    position: absolute;
+    top: 80%;
+    left: 25%;
+}
+
+#terminer, #continue {
+    width: 65%;
+    height: 15%;
+    font-size: 15px;
+    margin: 5% 55% 0 0;
 }
