Idk many things but gaming should be better

--- a/mainPage/AttributionPage/roleAttribution.css
+++ b/mainPage/AttributionPage/roleAttribution.css
@@ -102,3 +102,12 @@
     flex-direction: row;
     align-items: center;
 }
+
+#confirm {
+  background-color: palevioletred;
+}
+
+
+.active {
+    background-color: grey;
+}
