added assigned to thing

--- a/mainPage/Inventory2/inventory2.css
+++ b/mainPage/Inventory2/inventory2.css
@@ -8,9 +8,7 @@
     background-color: #ffdd00; /* Light yellow background color */
     justify-items: center;
     flex-wrap:wrap ;
-    left: 28px;
-    bottom:
-    /*trying to make the inventory fit within the text area below the game*/
+    /*try to make the inventory fit within the text area below the game*/
     
 }
 
