--- a/mainPage/AttributionPage/roleAttribution.css
+++ b/mainPage/AttributionPage/roleAttribution.css
@@ -62,6 +62,16 @@
     border-bottom: 1px solid DarkSlateGray;
 }
 
+.inventory {
+    box-sizing: border-box;
+    background-color: gainsboro;
+    padding: 20px 32px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 1px solid DarkSlateGray;
+}
+
 .member img {
     width: 40px;
     height: 40px;
@@ -111,4 +121,33 @@
 
 .active {
     background-color: grey;
+}
+
+.inventory {
+    justify-content: space-evenly;
+}
+
+.inventory button {
+    width: 32px;
+    height: 32px;
+}
+
+.weaponEquipButton {
+    width: 32px;
+    height: 32px;
+    margin: 0px 30px 0px 0px;
+    background-color: grey;
+}
+
+.armorEquipButton {
+    width: 32px;
+    height: 32px;
+    background-color: grey;
+    margin: 0px 30px 0px 0px;
+}
+
+.itemGroup {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
