--- a/mainPage/Inventory2/inventory2.css
+++ b/mainPage/Inventory2/inventory2.css
@@ -18,8 +18,8 @@
     display: flex;
     flex-direction: column;
     align-items: center; 
-    width: 60px; /* Set width to 192 pixels */
-    height: 80px; /* Set height to 240 pixels */
+    width: 72px; /* Set width to 192 pixels */
+    height: 96px; /* Set height to 240 pixels */
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 8px; /* Rounded border for each item */
@@ -60,12 +60,12 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%; /* Cover entire width of parent */
-    height: 100%; /* Cover entire height of parent */
+    width: 90%; /* Cover entire width of parent */
+    height: 95%; /* Cover entire height of parent */
     padding: 10px;
     color: #0c0808;
+    background-color: #b7b4b471;
     text-align: left;
-    font-style: italic;
     font-size: 10px;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
@@ -95,4 +95,8 @@
 /*expands item box during hover*/
 .inventory-item:hover {
     transform: scale(1.1); /* Scale up by 10% on hover */
+}
+
+.hidden {
+    display: none;
 }
