--- a/mainPage/style.css
+++ b/mainPage/style.css
@@ -189,7 +189,7 @@ buttton is clicked*/
   overflow-y: auto !important;
   display: flex;
   gap: 5px; /* Gap between grid items */
-  align-items: center;
+  align-items: left;
   border-radius: 10px; /* Rounded border for the container */
   padding: 20px; /* Padding inside the container */
   background-color: #ffdd00; /* Light yellow background color */
@@ -255,7 +255,7 @@ buttton is clicked*/
   text-align: left;
   font-size: 10px;
   border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 4px rgba(93, 93, 93, 0.236);
   
   
 }
