--- a/mainPage/AttributionPage/roleAttribution.css
+++ b/mainPage/AttributionPage/roleAttribution.css
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Poppins', sans-serif;
 }
 
-/* GLOBAL */
+/* GLOBAL TABS */
 #roleTab {
     width: 100%;
     height: 100vh;
@@ -12,29 +15,34 @@
 }
 
 #role {
-    width: 20%;
+    width: 40%;
     height: 100%;
-    background-color: white;
+    background-color: green;
     display: flex;
     flex-direction: column;
+    padding: 24px 32px;
 }
 
 #crewMembers {
-    width: 80%;
+    width: 60%;
     height: 100%;
-    background-color: white;
+    background-color: pink;
+    padding: 24px 32px;
 }
 
 /* ROLES */
 
-#role h2 {
-    padding: 16px 0;
-    text-align: center;
+h2 {
+    text-transform: uppercase;
+    letter-spacing: 8px;
+    color: white;
 }
 
 #role button {
     border: none;
     padding: 16px;
+    width: 12vh;
+    height: 12vh;
 }
 
 #role button:hover {
@@ -47,19 +55,42 @@
 
 /* CREW */
 
-#crewMembers h2 {
-    padding: 16px 0;
-    text-align: center;
+/* SCROLLBAR */
+
+::-webkit-scrollbar {
+}
+
+
+/* SELECT AND DESELECT BUTTONS */
+
+#select-all, #deselect-all {
+    padding: 8px;
+    margin: 16px 8px 16px 0;
+    border: 2px solid white;
+    background-color: rgba(24, 24, 24, 0);
+    border-radius: 50px;
+    color: white;
+    font-weight: 500;
+}
+
+#crewMembers p {
+    margin-bottom: 16px;
+    text-transform: uppercase;
+    letter-spacing: 8px;
+    font-weight: 500;
+    color: white;
 }
 
 .member {
+    height: 72px;
     box-sizing: border-box;
-    background-color: beige;
+    background-color: rgba(24, 24, 24, 0.3);
     padding: 20px 32px;
+    margin: 0 40px 8px 0px;
+    border-radius: 5px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border-bottom: 1px solid DarkSlateGray;
 }
 
 .inventory {
@@ -83,10 +114,11 @@
 
 .trait {
     width: auto;
-    height: 18px;
+    height: 16px;
     background-color: white;
-    margin: 0px 5px 0px 0px;
-    padding: 2px;
+    border-radius: 50px;
+    margin: 0px 8px 0px 0px;
+    padding: 8px 16px;
 }
 
 .namePtrait {
@@ -115,13 +147,17 @@
 }
 
 #confirm {
-  background-color: palevioletred;
+  background-color: white;
+  border-radius: 50px;
 }
 
 
 .active {
     background-color: grey;
 }
+
+
+/* INVENTORY THINGS */
 
 .inventory {
     justify-content: space-evenly;
