--- a/mainPage/style.css
+++ b/mainPage/style.css
@@ -34,8 +34,9 @@ body {
 
 /* Possible destinations text */
 h1 {
-  font-size: 40px;
-  font-weight: 800;
+  font-size: 24px;
+  font-weight: 400;
+  letter-spacing: 8px;
 }
 
 /* Resources bar */
