--- a/mainPage/style.css
+++ b/mainPage/style.css
@@ -309,13 +309,14 @@ buttton is clicked*/
   border: 1px solid #ccc;
   border-radius: 8px; /* Rounded border for each item */
   overflow: hidden; /* Hide overflow content */
+  
 }
 
 /* Item title styling */
 .item-title {
   text-align: left;
   margin-left: 40px;
-  color:black;
+  color:rgb(255, 255, 255);
   font-size: 24px; /* Adjust the font size as needed */
   font-weight: bold; /* Optionally make the font bold */
   margin-bottom: 0px; /* Space below the title */
@@ -436,7 +437,7 @@ buttton is clicked*/
   display: flex;
   color: white;
   align-items: center;
-  background-color: rgba(0, 0, 0, 0.415);
+  background-color: rgba(255, 255, 255, 0.115);
   border-collapse:collapse
 }
 .unitCell img {
@@ -461,18 +462,24 @@ buttton is clicked*/
 
 /* Background color based on item rarity */
 .inventory-item.rarity-common {
-  background-color: #867e7e4f; /* Light gray for common items */
+  background-color: #867e7e98; /* Light gray for common items */
 }
 
 .inventory-item.rarity-rare {
-  background-color: #0e1df354; /* Light blue for rare items */
+  background-color: #0e1df390; /* Light blue for rare items */
 }
 
 .inventory-item.rarity-legendary {
-  background-color: #ffb30053; /* Gold for legendary items */
+  background-color: #ffb300a6; /* Gold for legendary items */
 }
 
 .inventory-item.rarity-epic {
-  background-color: #5300a14f; /* Tomato red for epic items */
+  background-color: #5300a195; /* Tomato red for epic items */
 }
+
+
+#dest_desert, #dest_nil_shore, #dest_fluvial_city, #dest_desert_city, #dest_oasis, #dest_village {
+  max-height:60px;
+}
+
 
